# vkdecor

./: README.md  meson.build
locale/ro/LC_MESSAGES/: wf-plugin-vkdecor.po
locale/zh_CN/LC_MESSAGES/: wf-plugin-vkdecor.po
metadata/: meson.build  pixdecor.xml  vkdecor.xml
shaders/: compile.sh  meson.build  rounded.comp
src/: deco-button.cpp  deco-button.hpp  deco-effects.cpp  deco-effects.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-subsurface.hpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  meson.build  shade.hpp
